InfluxDb Pull, Container modifications